hcc/tests/conform/errors/parse/unterminated_string.hc
//@ error: unterminated string literal

#include <stdio.hh>
#include <stdlib.hh>
U0 Main()
{
  "abc;
}
